# gtracr

./: .coveragerc  .gitignore  .gitmodules  CLAUDE.md  meson.build  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
examples/: eval_benchmarks.py  eval_gmcutoff.py  eval_solver_comparison.py  eval_trajectory.py  example_benchmarks.ipynb  example_gmcutoff.ipynb
gtracr/: geomagnetic_cutoffs.py  meson.build  plotting.py  trajectory.py  utils.py
gtracr/lib/: igrf_table.py  igrf_utils.py  meson.build  trajectory_tracer.py
gtracr/lib/gpu/: igrf_table.cpp  igrf_table.hpp
gtracr/lib/include/: BatchGMRC.hpp  TrajectoryTracer.hpp  igrf.hpp
gtracr/lib/src/: BatchGMRC.cpp  TrajectoryTracer.cpp  igrf.cpp  pybind11_wrapper.cpp
gtracr/tests/: meson.build  test_bfield.py  test_gmrc.py  test_numerical_regression.py  test_particle_location.py  test_trajectories.py  test_trajectory_coverage.py  test_utils.py
src/gtracr/: meson.build
tests/: test_bfield.py  test_numerical_regression.py  test_solvers.py  test_trajectory_coverage.py
